[package]
name = "pake-cpace"
version = "0.1.6"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A simple implementation of CPace, a balanced PAKE."
keywords = ["cpace", "crypto", "pake"]
repository = "https://github.com/jedisct1/rust-cpace"
homepage = "https://github.com/jedisct1/rust-cpace"
categories = ["algorithms", "cryptography", "no-std"]
license = "ISC"
readme = "README.md"

[dependencies]
curve25519-dalek = "4.1"
getrandom = { version = "0.2", default-features = false }
hmac-sha512 = "1.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
